[gd_scene load_steps=17 format=3 uid="uid://bumc0bj5pcn8u"]

[ext_resource type="Script" uid="uid://bl4d11scuntup" path="res://scenes/MainMenu.gd" id="1_mainmenu"]
[ext_resource type="Texture2D" uid="uid://dfvbdqx0131f6" path="res://background.png" id="3_8a8k8"]
[ext_resource type="Texture2D" uid="uid://bfagcksvfjudm" path="res://assets/ui/menu/coin.png" id="3_coin"]
[ext_resource type="Texture2D" uid="uid://ul3anjhcph28" path="res://assets/ui/menu/flag_kg.png" id="4_kg"]
[ext_resource type="Texture2D" uid="uid://rib6saf06qud" path="res://assets/ui/menu/flag_ru.png" id="5_ru"]
[ext_resource type="Texture2D" uid="uid://ds0ov4gh1drm2" path="res://assets/ui/menu/flag_en.png" id="6_en"]
[ext_resource type="Texture2D" uid="uid://dsvivpnupcfgt" path="res://assets/ui/menu/instagram.png" id="7_insta"]
[ext_resource type="Texture2D" uid="uid://bgo2ylwdouh6m" path="res://assets/ui/menu/telegram.png" id="8_tg"]
[ext_resource type="Shader" uid="uid://cy8mq0e3i3agc" path="res://assets/ui/menu/blur_background.gdshader" id="10_blur"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blur"]
shader = ExtResource("10_blur")
shader_parameter/blur_strength = 2.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_play"]
bg_color = Color(0.8, 0.1, 0.12, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0.9, 0.2, 0.2, 0.6)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_play_pressed"]
bg_color = Color(0.6, 0.08, 0.1, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0.9, 0.2, 0.2, 0.4)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_play_hover"]
bg_color = Color(0.9, 0.15, 0.18, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(1, 0.3, 0.3, 0.7)
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ad"]
bg_color = Color(0.18, 0.18, 0.18, 0.85)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ad_pressed"]
bg_color = Color(0.12, 0.12, 0.12, 0.9)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ad_hover"]
bg_color = Color(0.28, 0.28, 0.28, 0.9)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Root" type="Control"]
layout_mode = 3
anchor_right = 1.087
anchor_bottom = 1.0
offset_right = -167.04004
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mainmenu")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.6, 0.6, 0.6, 1)
material = SubResource("ShaderMaterial_blur")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8a8k8")
expand_mode = 1
stretch_mode = 6

[node name="DarkOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.55)

[node name="PlayButton" type="Button" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -65.0
offset_right = 200.0
offset_bottom = 65.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxFlat_play")
theme_override_styles/pressed = SubResource("StyleBoxFlat_play_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_play_hover")
text = "PLAY"

[node name="CoinsPanel" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_top = 18.0
offset_right = -24.0
offset_bottom = 58.0
theme_override_constants/separation = 8
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="CoinsPanel"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
texture = ExtResource("3_coin")
expand_mode = 1
stretch_mode = 6

[node name="CoinsLabel" type="Label" parent="CoinsPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "0"
vertical_alignment = 1

[node name="WatchAdButton" type="Button" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -324.0
offset_top = 72.0
offset_right = -24.0
offset_bottom = 172.0
grow_horizontal = 0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ad")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ad_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_ad_hover")
text = "WATCH AD / + COINS"

[node name="LanguagePanel" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 20.0
offset_right = 264.0
offset_bottom = 68.0
theme_override_constants/separation = 12

[node name="BtnKG" type="TextureButton" parent="LanguagePanel"]
custom_minimum_size = Vector2(72, 48)
layout_mode = 2
texture_normal = ExtResource("4_kg")
texture_pressed = ExtResource("4_kg")
texture_hover = ExtResource("4_kg")
ignore_texture_size = true
stretch_mode = 5

[node name="BtnRU" type="TextureButton" parent="LanguagePanel"]
custom_minimum_size = Vector2(72, 48)
layout_mode = 2
texture_normal = ExtResource("5_ru")
texture_pressed = ExtResource("5_ru")
texture_hover = ExtResource("5_ru")
ignore_texture_size = true
stretch_mode = 5

[node name="BtnEN" type="TextureButton" parent="LanguagePanel"]
custom_minimum_size = Vector2(72, 48)
layout_mode = 2
texture_normal = ExtResource("6_en")
texture_pressed = ExtResource("6_en")
texture_hover = ExtResource("6_en")
ignore_texture_size = true
stretch_mode = 5

[node name="SocialPanel" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -80.0
offset_right = -24.0
offset_bottom = -24.0
theme_override_constants/separation = 16
alignment = 1

[node name="BtnInstagram" type="TextureButton" parent="SocialPanel"]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2
texture_normal = ExtResource("7_insta")
texture_pressed = ExtResource("7_insta")
texture_hover = ExtResource("7_insta")
ignore_texture_size = true
stretch_mode = 5

[node name="BtnTelegram" type="TextureButton" parent="SocialPanel"]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2
texture_normal = ExtResource("8_tg")
texture_pressed = ExtResource("8_tg")
texture_hover = ExtResource("8_tg")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="WatchAdButton" to="." method="_on_watch_ad_button_pressed"]
[connection signal="pressed" from="LanguagePanel/BtnKG" to="." method="_on_btn_kg_pressed"]
[connection signal="pressed" from="LanguagePanel/BtnRU" to="." method="_on_btn_ru_pressed"]
[connection signal="pressed" from="LanguagePanel/BtnEN" to="." method="_on_btn_en_pressed"]
[connection signal="pressed" from="SocialPanel/BtnInstagram" to="." method="_on_btn_instagram_pressed"]
[connection signal="pressed" from="SocialPanel/BtnTelegram" to="." method="_on_btn_telegram_pressed"]
